--- a/index.html
+++ b/index.html
@@ -6,3 +6,8 @@
     <link rel="stylesheet" href="pages/index.css">
     <title>Место</title>
 </head>
+<body class="root">
+    <header>
+        
+    </header>
+</body>
