--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Место</title>
 </head>
 <body class="root">
-    <header>
-        
+    <header class=header>
+        <img class="header__logo" src="./images/logo.svg" alt="Логотип">
     </header>
 </body>
+</html>
