--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">    
         <main class="content">
             <section class="profile">
-                <img class="profile__avatar" src="./images/Avatar.png" alt="Фотография профиля">
+                <img class="profile__avatar" src="./images/avatar.jpg" alt="Фотография профиля">
                 <div class="profile__info">
                     <div class="profile__user-info">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
