--- a/index.html
+++ b/index.html
@@ -24,47 +24,47 @@
                 <button type="button" class="button profile__button-add opacity"></button>
             </section>
             <section class="elements">
-                <ul class="element__list">
-                    <li class="element">
-                        <img class="element__image" src="./images/karachaevsk.jpg" alt="Заброшенное здание на фоне гор">
-                        <div class="element__info">
-                            <h3 class="element__title">Карачаево-Черкесская Республика</h3>
-                            <button type="button" class="button element__button"></button>    
+                <ul class="elements__list">
+                    <li class="elements__item">
+                        <img class="elements__image" src="./images/karachaevsk.jpg" alt="Заброшенное здание на фоне гор">
+                        <div class="elements__info">
+                            <h3 class="elements__title">Карачаево-Черкесская Республика</h3>
+                            <button type="button" class="button elements__button opacity"></button>    
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="element__image" src="./images/elbrus.jpg" alt="Гора Эльбрус во время заката">
-                        <div class="element__info">
-                            <h3 class="element__title">Гора Эльбрус</h3>
-                            <button type="button" class="button element__button"></button>    
+                    <li class="elements__item">
+                        <img class="elements__image" src="./images/elbrus.jpg" alt="Гора Эльбрус во время заката">
+                        <div class="elements__info">
+                            <h3 class="elements__title">Гора Эльбрус</h3>
+                            <button type="button" class="button elements__button opacity"></button>    
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="element__image" src="./images/dombay.jpg" alt="Горы в снегу">
-                        <div class="element__info">
-                            <h3 class="element__title">Домбай</h3>
-                            <button type="button" class="button element__button"></button>    
+                    <li class="elements__item">
+                        <img class="elements__image" src="./images/dombay.jpg" alt="Горы в снегу">
+                        <div class="elements__info">
+                            <h3 class="elements__title">Домбай</h3>
+                            <button type="button" class="button elements__button opacity"></button>    
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="element__image" src="./images/baikal.jpg" alt="Зимний Байкал покрытый льдом">
-                        <div class="element__info">
-                            <h3 class="element__title">Байкал</h3>
-                            <button type="button" class="button element__button"></button>
+                    <li class="elements__item">
+                        <img class="elements__image" src="./images/baikal.jpg" alt="Зимний Байкал покрытый льдом">
+                        <div class="elements__info">
+                            <h3 class="elements__title">Байкал</h3>
+                            <button type="button" class="button elements__button opacity"></button>
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="element__image" src="./images/kamchatka.jpg" alt="Голубое озеро в горах">
-                        <div class="element__info">
-                            <h3 class="element__title">Камчатка</h3>
-                            <button type="button" class="button element__button"></button>    
+                    <li class="elements__item">
+                        <img class="elements__image" src="./images/kamchatka.jpg" alt="Голубое озеро в горах">
+                        <div class="elements__info">
+                            <h3 class="elements__title">Камчатка</h3>
+                            <button type="button" class="button elements__button opacity"></button>    
                         </div>
                     </li>
-                    <li class="element">
-                        <img class="element__image" src="./images/buryatiya.jpg" alt="Заснеженные горы Бурятии">
-                        <div class="element__info">
-                            <h3 class="element__title">Бурятия</h3>
-                            <button type="button" class="button element__button"></button>    
+                    <li class="elements__item">
+                        <img class="elements__image" src="./images/buryatiya.jpg" alt="Заснеженные горы Бурятии">
+                        <div class="elements__info">
+                            <h3 class="elements__title">Бурятия</h3>
+                            <button type="button" class="button elements__button opacity"></button>    
                         </div>
                     </li>
                 </ul>
@@ -74,10 +74,10 @@
             <div class="popup__container">
                 <button type="button" class="button popup__close-icon opacity"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
-                <form class="popup__input-container">
-                    <input type="text" class="popup__item popup__input-name" name="heading" value="Жак-Ив Кусто" placeholder="Имя" required>
-                    <input type="text" class="popup__item popup__input-about" name="subheading" value="Исследователь океана" placeholder="О себе" required>
-                    <button type="submit" class="button popup__button-submit opacity_dark">Сохранить</button>
+                <form class="popup__input-container" name="edit-form" action="#" method="POST">
+                    <input type="text" class="popup__item popup__item_input-name" name="heading" value="Жак-Ив Кусто" placeholder="Имя" required>
+                    <input type="text" class="popup__item popup__item_input-about" name="subheading" value="Исследователь океана" placeholder="О себе" required>
+                    <button type="submit" class="button popup__button-submit">Сохранить</button>
                 </form>
             </div>
         </section>
