--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <div class="profile__info">
                     <div class="profile__user-info">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button type="button" class="button profile__button-edit opacity"></button>
+                        <button type="button" aria-label="обновить информацию пользователя" class="button profile__button-edit opacity"></button>
                     </div>
                     <p class="profile__about">Исследователь океана</p>
                 </div>
-                <button type="button" class="button profile__button-add opacity"></button>
+                <button type="button" aria-label="добавить новую карточку" class="button profile__button-add opacity"></button>
             </section>
             <section class="elements">
                 <ul class="elements__list">
@@ -29,42 +29,42 @@
                         <img class="elements__image" src="./images/karachaevsk.jpg" alt="Заброшенное здание на фоне гор">
                         <div class="elements__info">
                             <h3 class="elements__title">Карачаево-Черкесская Республика</h3>
-                            <button type="button" class="button elements__button opacity"></button>    
+                            <button type="button" aria-label="выразить положительную реакцию" class="button elements__button opacity"></button>    
                         </div>
                     </li>
                     <li class="elements__item">
                         <img class="elements__image" src="./images/elbrus.jpg" alt="Гора Эльбрус во время заката">
                         <div class="elements__info">
                             <h3 class="elements__title">Гора Эльбрус</h3>
-                            <button type="button" class="button elements__button opacity"></button>    
+                            <button type="button" aria-label="выразить положительную реакцию" class="button elements__button opacity"></button>    
                         </div>
                     </li>
                     <li class="elements__item">
                         <img class="elements__image" src="./images/dombay.jpg" alt="Горы в снегу">
                         <div class="elements__info">
                             <h3 class="elements__title">Домбай</h3>
-                            <button type="button" class="button elements__button opacity"></button>    
+                            <button type="button" aria-label="выразить положительную реакцию" class="button elements__button opacity"></button>    
                         </div>
                     </li>
                     <li class="elements__item">
                         <img class="elements__image" src="./images/baikal.jpg" alt="Зимний Байкал покрытый льдом">
                         <div class="elements__info">
                             <h3 class="elements__title">Байкал</h3>
-                            <button type="button" class="button elements__button opacity"></button>
+                            <button type="button" aria-label="выразить положительную реакцию" class="button elements__button opacity"></button>
                         </div>
                     </li>
                     <li class="elements__item">
                         <img class="elements__image" src="./images/kamchatka.jpg" alt="Голубое озеро в горах">
                         <div class="elements__info">
                             <h3 class="elements__title">Камчатка</h3>
-                            <button type="button" class="button elements__button opacity"></button>    
+                            <button type="button" aria-label="выразить положительную реакцию" class="button elements__button opacity"></button>    
                         </div>
                     </li>
                     <li class="elements__item">
                         <img class="elements__image" src="./images/buryatiya.jpg" alt="Заснеженные горы Бурятии">
                         <div class="elements__info">
                             <h3 class="elements__title">Бурятия</h3>
-                            <button type="button" class="button elements__button opacity"></button>    
+                            <button type="button" aria-label="выразить положительную реакцию" class="button elements__button opacity"></button>    
                         </div>
                     </li>
                 </ul>
@@ -72,11 +72,11 @@
         </main>
         <section class="popup">
             <div class="popup__container">
-                <button type="button" class="button popup__close-icon opacity"></button>
+                <button type="button" aria-label="закрыть модальное окно" class="button popup__close-icon opacity"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
                 <form class="popup__input-container" name="edit-form" action="#" method="POST">
-                    <input type="text" class="popup__item popup__item_input-name" name="heading" value="Жак-Ив Кусто" placeholder="Имя" required>
-                    <input type="text" class="popup__item popup__item_input-about" name="subheading" value="Исследователь океана" placeholder="О себе" required>
+                    <input type="text" class="popup__item popup__item_input-name" name="heading" value="" placeholder="Имя" required>
+                    <input type="text" class="popup__item popup__item_input-about" name="subheading" value="" placeholder="О себе" required>
                     <button type="submit" class="button popup__button-submit">Сохранить</button>
                 </form>
             </div>
