правка попап стилей на моб разрешениях

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </section>
             <template class="elements-template">    
                 <li class="elements__item">
-                    <img class="elements__image" src="">
+                    <img class="elements__image" src="#" alt="Изображение">
                     <button type="button" aria-label="удалить элемент" class="button button__delete opacity"></button>
                     <div class="elements__info">
                         <h3 class="elements__title"></h3>
