--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
             <div class="popup__container">
                 <button type="button" aria-label="закрыть модальное окно" class="button popup__close popup__close_edit opacity"></button>
                 <h3 class="popup__title">Редактировать профиль</h3>
-                <form class="popup__input popup__input_container-edit" name="edit-form" action="#" method="POST">
-                    <input type="text" class="popup__item popup__item_input-name" name="heading" value="" placeholder="Имя" required>
-                    <input type="text" class="popup__item popup__item_input-about" name="subheading" value="" placeholder="О себе" required>
+                <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
+                    <label class="popup__field">
+                        <input type="text" id="name-input" class="popup__item popup__item_input-name" name="name" value="" placeholder="Имя" required minlength="2" maxlength="40">
+                        <span id="name-input-error" class="popup__item-error"></span>
+                    </label>
+                    <label class="popup__field">
+                        <input type="text" id="about-input" class="popup__item popup__item_input-about" name="about" value="" placeholder="О себе" required minlength="2" maxlength="200">
+                        <span id="about-input-error" class="popup__item-error"></span>
+                    </label>
                     <button type="submit" class="button popup__button-submit">Сохранить</button>
                 </form>
             </div>
@@ -59,9 +65,15 @@
             <div class="popup__container">
                 <button type="button" aria-label="закрыть модальное окно" class="button popup__close popup__close_add opacity"></button>
                 <h3 class="popup__title">Новое место</h3>
-                <form class="popup__input popup__input_container-add" name="edit-form" action="#" method="POST">
-                    <input type="text" class="popup__item popup__item_input-title" name="heading" value="" placeholder="Название" required>
-                    <input type="text" class="popup__item popup__item_input-link" name="subheading" value="" placeholder="Ссылка на картинку" required>
+                <form name="add" class="popup__form popup__input_container-add" action="#" method="POST" novalidate>
+                    <label class="popup__field">
+                        <input type="text" id="title-input" class="popup__item popup__item_input-title" name="title" value="" placeholder="Название" required minlength="1" maxlength="30">
+                        <span id="title-input-error" class="popup__item-error"></span>
+                    </label>
+                    <label class="popup__field">
+                        <input type="url" id="link-input" class="popup__item popup__item_input-link" name="link" value="" placeholder="Ссылка на картинку" required>
+                        <span id="link-input-error" class="popup__item-error"></span>
+                    </label>
                     <button type="submit" class="button popup__button-submit">Создать</button>
                 </form>
             </div>
@@ -76,5 +88,6 @@
         </section>
     </div>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
 </body>
 </html>
