--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <h3 class="popup__title">Редактировать профиль</h3>
                 <form name="edit" class="popup__form popup__input_container-edit" action="#" method="POST" novalidate>
                     <label class="popup__field">
-                        <input type="text" id="name-input" class="popup__item popup__item_input-name" name="name" value="" placeholder="Имя" required minlength="2" maxlength="40" pattern="[A-Za-zА-Яа-яЁё]">
+                        <input type="text" id="name-input" class="popup__item popup__item_input-name" name="name" value="" placeholder="Имя" required minlength="2" maxlength="40">
                         <span id="name-input-error" class="popup__item-error"></span>
                     </label>
                     <label class="popup__field">
-                        <input type="text" id="about-input" class="popup__item popup__item_input-about" name="about" value="" placeholder="О себе" required minlength="2" maxlength="200" pattern="[A-Za-zА-Яа-яЁё]">
+                        <input type="text" id="about-input" class="popup__item popup__item_input-about" name="about" value="" placeholder="О себе" required minlength="2" maxlength="200">
                         <span id="about-input-error" class="popup__item-error"></span>
                     </label>
                     <button type="submit" class="button popup__button-submit">Сохранить</button>
@@ -67,7 +67,7 @@
                 <h3 class="popup__title">Новое место</h3>
                 <form name="add" class="popup__form popup__input_container-add" action="#" method="POST" novalidate>
                     <label class="popup__field">
-                        <input type="text" id="title-input" class="popup__item popup__item_input-title" name="title" value="" placeholder="Название" required minlength="1" maxlength="30" pattern="[A-Za-zА-Яа-яЁё]">
+                        <input type="text" id="title-input" class="popup__item popup__item_input-title" name="title" value="" placeholder="Название" required minlength="1" maxlength="30">
                         <span id="title-input-error" class="popup__item-error"></span>
                     </label>
                     <label class="popup__field">
