--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
             </figure>
         </section>
     </div>
-    <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="scripts/utils.js"></script>
+    <script type="module" src="scripts/Card.js"></script>
+    <script type="module" src="scripts/FormValidator.js"></script>
+    <script type="module" src="scripts/index.js"></script>
+    <script type="module" src="scripts/initialCards.js"></script>
 </body>
 </html>
