fixed errors first review

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
 
         <template class="card-template">
             <li class="card">
-                <img class="card__image" src="#" alt="Изображение">
+                <img class="card__image" src="#" alt="#">
                 <button type="button" aria-label="удалить элемент" class="button button__delete opacity"></button>
                 <div class="card__info">
                     <h3 class="card__title"></h3>
@@ -81,7 +81,7 @@
         <section class="popup popup__image popup__background_image">
             <figure class="popup__container popup__container_image">
                 <button type="button" aria-label="закрыть модальное окно" class="button popup__close popup__close_image opacity"></button>
-                <img class="popup__view">
+                <img class="popup__view" src="#" alt="#">
                 <figcaption class="popup__title popup__title_image"></figcaption>
             </figure>
         </section>
