--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,15 @@
         <main class="content">
             <section class="profile">
                 <dev class="profile__avatar">
-                    <img class="profile__image" src="./images/avatar.jpg" value="" alt="Фотография профиля">
-                    <button class="button profile__button-avatar profile__cover" aria-label="обновить фотографию пользователя"></button>
+                    <img class="profile__image" src="#" alt="Фотография профиля">
+                    <div class="profile__cover">
+                        <button class="button profile__button-avatar" aria-label="обновить фотографию пользователя"></button>
+                    </div>
                 </dev>
                 <div class="profile__info">
-                    <h1 class="profile__name">Жак-Ив Кусто</h1>
+                    <h1 class="profile__name"></h1>
                     <button type="button" aria-label="обновить информацию пользователя" class="button profile__button-edit opacity"></button>
-                    <p class="profile__about">Исследователь океана</p>
+                    <p class="profile__about"></p>
                 </div>
                 <button type="button" aria-label="добавить новую карточку" class="button profile__button-add opacity"></button>
             </section>
@@ -42,7 +44,7 @@
                     <h3 class="card__title"></h3>
                     <div class="card__like">
                         <button type="button" aria-label="выразить положительную реакцию" class="button button__like opacity"></button>
-                        <span class="card__like-counter">1</span>
+                        <dev class="card__like-counter"></dev>
                     </div>
                 </div>
             </li>
@@ -61,7 +63,7 @@
                         <input type="text" id="about-input" class="popup__item popup__item_input-about" name="about" value="" placeholder="О себе" required minlength="2" maxlength="200">
                         <span id="about-input-error" class="popup__item-error"></span>
                     </label>
-                    <button type="submit" class="button popup__button-submit">Сохранить</button>
+                    <button type="submit" class="button popup__button-submit popup__button-submit-edit">Сохранить</button>
                 </form>
             </div>
         </section>
@@ -72,14 +74,14 @@
                 <h3 class="popup__title">Новое место</h3>
                 <form name="add" class="popup__form popup__input_container-add" action="#" method="POST" novalidate>
                     <label class="popup__field">
-                        <input type="text" id="title-input" class="popup__item popup__item_input-title" name="title" value="" placeholder="Название" required minlength="1" maxlength="30">
+                        <input type="text" id="title-input" class="popup__item popup__item_input-title" name="name" value="" placeholder="Название" required minlength="1" maxlength="30">
                         <span id="title-input-error" class="popup__item-error"></span>
                     </label>
                     <label class="popup__field">
                         <input type="url" id="link-input" class="popup__item popup__item_input-link" name="link" value="" placeholder="Ссылка на картинку" required>
                         <span id="link-input-error" class="popup__item-error"></span>
                     </label>
-                    <button type="submit" class="button popup__button-submit">Создать</button>
+                    <button type="submit" class="button popup__button-submit popup__button-submit-add">Создать</button>
                 </form>
             </div>
         </section>
@@ -90,10 +92,10 @@
                 <h3 class="popup__title">Обновить аватар</h3>
                 <form name="avatar" class="popup__form popup__input_container-avatar" action="#" method="POST" novalidate>
                     <label class="popup__field">
-                        <input type="url" id="link-input" class="popup__item popup__item_input-link" name="link" value="" placeholder="Ссылка на картинку" required>
+                        <input type="url" id="link-input" class="popup__item popup__item_input-avatar" name="link" value="" placeholder="Ссылка на картинку" required>
                         <span id="link-input-error" class="popup__item-error"></span>
                     </label>
-                    <button type="submit" class="button popup__button-submit">Сохранить</button>
+                    <button type="submit" class="button popup__button-submit popup__button-submit-avatar">Сохранить</button>
                 </form>
             </div>
         </section>
@@ -102,8 +104,8 @@
             <div class="popup__container">
                 <button type="button" aria-label="закрыть модальное окно" class="button popup__close popup__close_delete opacity"></button>
                 <h3 class="popup__title">Вы уверены?</h3>
-                <form name="avatar" class="popup__form popup__input_container-delete" action="#" method="POST">
-                    <button type="submit" class="button popup__button-submit">Сохранить</button>
+                <form name="confirm" class="popup__form popup__input_container-delete">
+                    <button type="submit" class="button popup__button-submit">Да</button>
                 </form>
             </div>
         </section>
