updated readme and HTML btns

--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,15 @@
                 <dev class="profile__avatar">
                     <img class="profile__image" src="#" alt="Фотография профиля">
                     <div class="profile__cover">
-                        <button class="button profile__button-avatar" aria-label="обновить фотографию пользователя"></button>
+                        <button class="button profile__button-avatar" title="Обновить Аватар" aria-label="обновить фотографию пользователя"></button>
                     </div>
                 </dev>
                 <div class="profile__info">
                     <h1 class="profile__name"></h1>
-                    <button type="button" aria-label="обновить информацию пользователя" class="button profile__button-edit opacity"></button>
+                    <button type="button" title="Обновить Информацию" aria-label="обновить информацию пользователя" class="button profile__button-edit opacity"></button>
                     <p class="profile__about"></p>
                 </div>
-                <button type="button" aria-label="добавить новую карточку" class="button profile__button-add opacity"></button>
+                <button type="button" title="Добавить Карточку" aria-label="добавить новую карточку" class="button profile__button-add opacity"></button>
             </section>
             <section class="card-container">
                 <ul class="card-container__list">
@@ -39,11 +39,11 @@
         <template class="card-template">
             <li class="card">
                 <img class="card__image" src="#" alt="#">
-                <button type="button" aria-label="удалить элемент" class="button button__delete opacity"></button>
+                <button type="button" title="Удалить Элемент" aria-label="удалить элемент" class="button button__delete opacity"></button>
                 <div class="card__info">
                     <h3 class="card__title"></h3>
                     <div class="card__like">
-                        <button type="button" aria-label="выразить положительную реакцию" class="button button__like opacity"></button>
+                        <button type="button" title="Поставить/Удалить лайк" aria-label="выразить положительную реакцию" class="button button__like opacity"></button>
                         <dev class="card__like-counter"></dev>
                     </div>
                 </div>
